--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <a href="#" class="logo">Dylan<span class="gradient-text">Roth</span></a>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -136,5 +136,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
